カラー即時反映

--- a/myPj/qt-st-visual/partials/qt-offcanvas.html
+++ b/myPj/qt-st-visual/partials/qt-offcanvas.html
@@ -299,10 +299,10 @@
         </label>
       </div>
 
-      <hr />
+      <!-- <hr /> -->
 
       <!-- 設定完了ボタン -->
-      <div class="d-grid mt-4">
+      <!-- <div class="d-grid mt-4">
         <button
           id="config-complete-btn"
           class="btn btn-primary"
@@ -311,7 +311,8 @@
         >
           設定完了
         </button>
-      </div>
+      </div> -->
+
     </form>
 
     <div class="mt-4 text-center">
