--- a/myPj/qt-st-visual/partials/qt-offcanvas.html
+++ b/myPj/qt-st-visual/partials/qt-offcanvas.html
@@ -71,24 +71,7 @@
           >
             <div class="accordion-body bg-secondary bg-opacity-25">
               <div class="row g-3">
-                <!-- 背景色 -->
-                <div class="col-12 col-md-6">
-                  <div class="d-flex align-items-center">
-                    <input
-                      type="color"
-                      class="form-control form-control-color p-0 border-0"
-                      id="input-bg-color"
-                      value="#000011"
-                      title="背景色を選択"
-                    />
-                    <label
-                      for="input-bg-color"
-                      class="col-form-label text-white ms-2"
-                    >
-                      背景色
-                    </label>
-                  </div>
-                </div>
+                
                 <!-- 球の色 -->
                 <div class="col-12 col-md-6">
                   <div class="d-flex align-items-center">
@@ -143,6 +126,25 @@
                     </label>
                   </div>
                 </div>
+                <!-- 背景色 -->
+                <div class="col-12 col-md-6">
+                  <!-- <div class="d-flex align-items-center">
+                    <input
+                      type="color"
+                      class="form-control form-control-color p-0 border-0"
+                      id="input-bg-color"
+                      value="#000011"
+                      title="背景色を選択"
+                    />
+                    <label
+                      for="input-bg-color"
+                      class="col-form-label text-white ms-2"
+                    >
+                      背景色
+                    </label>
+                  </div> -->
+                </div>
+                
               </div> <!-- /.row -->
             </div> <!-- /.accordion-body -->
           </div> <!-- /.accordion-collapse -->
