--- a/myPj/qt-st-visual/partials/d3-julia-navbar.html
+++ b/myPj/qt-st-visual/partials/d3-julia-navbar.html
@@ -1,4 +1,7 @@
-<nav class="navbar bg-transparent position-fixed w-100">
+<nav 
+  class="navbar bg-transparent position-fixed w-100"
+  id="navbar"
+>
 <!-- <nav class="navbar navbar-dark bg-dark"> -->
   <div class="container-fluid">
     <!-- <a class="navbar-brand" href="#">Julia Set Inverse Mapping Visualizer</a> -->
