--- a/myPj/qt-st-visual/partials/d3-julia-navbar.html
+++ b/myPj/qt-st-visual/partials/d3-julia-navbar.html
@@ -21,8 +21,8 @@
       <button id="btn-pause" class="btn btn-secondary btn-pause btn-sm me-2 d-none" type="button">
         Pause
       </button>
-      <button id="btn-stop" class="btn btn-danger btn-sm" type="button">
-        Stop
+      <button id="btn-reset" class="btn btn-danger btn-sm" type="button">
+        Reset
       </button>
     </div>
 
