--- a/myPj/qt-st-visual/partials/d3-julia-offcanvas.html
+++ b/myPj/qt-st-visual/partials/d3-julia-offcanvas.html
@@ -16,6 +16,11 @@
   </div>
   <div class="offcanvas-body">
     <form>
+      <div class="form-check form-switch mb-3">
+        <input class="form-check-input" type="checkbox" id="toggle-ground-visibility" checked />
+        <label class="form-check-label" for="toggle-ground-visibility">地面を表示</label>
+      </div>
+      
       <!-- 凡例表示スイッチ -->
       <div class="form-check form-switch mb-3">
         <input
