--- a/myPj/qt-st-visual-old/partials/d3-julia-main.html
+++ b/myPj/qt-st-visual-old/partials/d3-julia-main.html
@@ -1,4 +1,4 @@
-<div id="canvas-container" class="position-relative overflow-hidden flex-grow-1">
+<div id="main-container" class="position-relative overflow-hidden flex-grow-1">
 	<canvas id="legend-canvas"></canvas>
 	<button id="btn-top-view" class="btn btn-top-view" type="button">
 	  <i class="bi bi-grid-3x2-gap icon" aria-hidden="true"></i>
