--- a/myPj/qt-st-visual/partials/d3-julia-main.html
+++ b/myPj/qt-st-visual/partials/d3-julia-main.html
@@ -1,8 +1,8 @@
-<div id="canvas-container" class="position-relative overflow-hidden flex-grow-1">
-	<canvas id="legend-canvas"></canvas>
+<div id="main-container" class="position-relative overflow-hidden flex-grow-1">
+	<!-- <canvas id="legend-canvas"></canvas>
 	<button id="btn-top-view" class="btn btn-top-view" type="button">
 	  <i class="bi bi-grid-3x2-gap icon" aria-hidden="true"></i>
 	  <span class="label">2D view</span>
-	</button>
+	</button> -->
   </div>
   
