--- a/myPj/qt-st-visual/partials/d3-julia-offcanvas.html
+++ b/myPj/qt-st-visual/partials/d3-julia-offcanvas.html
@@ -22,7 +22,7 @@
       </div>
       
       <!-- 凡例表示スイッチ -->
-      <div class="form-check form-switch mb-3">
+      <!-- <div class="form-check form-switch mb-3">
         <input
           class="form-check-input"
           type="checkbox"
@@ -30,7 +30,7 @@
           checked
         />
         <label class="form-check-label small" for="chk-legend">凡例を表示</label>
-      </div>
+      </div> -->
 
       <!-- Re(c) -->
       <div class="mb-3">
