add llink in offcanvas

--- a/myPj/qt-st-visual/partials/d3-julia-offcanvas.html
+++ b/myPj/qt-st-visual/partials/d3-julia-offcanvas.html
@@ -105,6 +105,25 @@
         </button>
       </div>
       <!-- ─────────── ここまで追加 ─────────── -->
+       <!-- モジュール切り替えボタン -->
+      <div class="d-grid mt-4">
+        <a
+          href="./?alg=qt-st"
+          class="btn btn-outline-light btn-sm"
+        >
+        Quaternion Rotation <br>Stereographic Projection Visualizer
+        </a>
+      </div>
+      <div class="mt-4 text-center">
+        <a 
+          href="https://uminomae.github.io/pjdhiro/" 
+          class="text-decoration-none text-white small"
+          target="_blank"
+          rel="noopener"
+        >
+        @pjdhiro
+        </a>
+      </div>
     </form>
   </div>
 </div>
