--- a/myPj/qt-st-visual/partials/qt-offcanvas.html
+++ b/myPj/qt-st-visual/partials/qt-offcanvas.html
@@ -302,15 +302,21 @@
       </div>
 
     </form>
-
+    <div class="d-grid mt-4">
+      <a
+        href="./?alg=julia-inverse"
+        class="btn btn-outline-light btn-sm"
+      >
+      Julia Set Inverse Mapping Visualizer
+      </a>
     <div class="mt-4 text-center">
       <a 
-        href="https://uminomae.github.io/pjdhiro/20250531julia/" 
+        href="https://uminomae.github.io/pjdhiro/" 
         class="text-decoration-none text-white small"
         target="_blank"
         rel="noopener"
       >
-      陰陽なJulia集合を逆にたどる
+      @pjdhiro
       </a>
     </div>
 
