--- a/_layouts/default-en.html
+++ b/_layouts/default-en.html
@@ -10,9 +10,10 @@
   </head>
 
   <body class="layout--{{ page.layout | default: layout.layout }}{% if page.classes or layout.classes %}{{ page.classes | default: layout.classes | join: ' ' | prepend: ' ' }}{% endif %}" dir="{% if site.rtl %}rtl{% else %}ltr{% endif %}">
-    {% include_cached skip-links.html %}
-    {% include_cached masthead.html %}
-
+    <!-- {% include_cached skip-links.html %} -->
+    <!-- {% include_cached masthead.html %} -->
+    {% include masthead.html %}
+    </div>
     <div class="initial-content">
       {{ content }}
       {% include after-content.html %}
