--- a/assets/css/custom.scss
+++ b/assets/css/custom.scss
@@ -24,3 +24,6 @@
   height: auto;
   display: block;
 }
+
+.img-figure { margin: 0; }
+.img-caption { margin-top: .25rem; text-align: center; font-size: .9em; }
