20260203-project-management-report

--- a/assets/css/custom.scss
+++ b/assets/css/custom.scss
@@ -27,3 +27,5 @@
 
 .img-figure { margin: 0; }
 .img-caption { margin-top: .25rem; text-align: center; font-size: .9em; }
+
+// @import "custom/ai-generated-dark";
